--- a/app/src/main/res/layout/activity_my_calculator.xml
+++ b/app/src/main/res/layout/activity_my_calculator.xml
@@ -9,155 +9,15 @@
     tools:context=".MyCalculator"
     android:id="@+id/R"
     android:background="#ff000000">
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout android:id="@+id/banner"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/calcDisplay"
+        android:minHeight="50dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="64dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentLeft="true"
-        android:background="#ffffffff"
-        android:textSize="27dp"
-        android:textIsSelectable="true"
-        android:textAlignment="gravity"
-        android:gravity="end" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1"
-        android:id="@+id/b11"
-        android:background="#ffd5d5d5"
-        android:layout_marginTop="65dp"
-        android:layout_marginLeft="40dp"
-        android:layout_below="@+id/calcDisplay"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="onButtonClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2"
-        android:id="@+id/b12"
-        android:background="#ffd5d5d5"
-        android:layout_alignTop="@+id/b11"
-        android:layout_centerHorizontal="true"
-        android:onClick="onButtonClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3"
-        android:id="@+id/b13"
-        android:background="#ffd5d5d5"
-        android:layout_alignTop="@+id/b12"
-        android:layout_alignRight="@+id/calcDisplay"
-        android:layout_alignEnd="@+id/calcDisplay"
-        android:layout_marginRight="40dp"
-        android:onClick="onButtonClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="4"
-        android:id="@+id/b21"
-        android:background="#ffd5d5d5"
-        android:layout_alignBaseline="@+id/b22"
-        android:layout_alignBottom="@+id/b22"
-        android:layout_alignLeft="@+id/b11"
-        android:layout_alignStart="@+id/b11"
-        android:onClick="onButtonClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="6"
-        android:id="@+id/b23"
-        android:background="#ffd5d5d5"
-        android:layout_below="@+id/b13"
-        android:layout_alignLeft="@+id/b13"
-        android:layout_alignStart="@+id/b13"
-        android:layout_marginTop="45dp"
-        android:onClick="onButtonClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="5"
-        android:id="@+id/b22"
-        android:background="#ffd5d5d5"
-        android:layout_alignTop="@+id/b23"
-        android:layout_centerHorizontal="true"
-        android:onClick="onButtonClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="9"
-        android:id="@+id/b33"
-        android:background="#ffd5d5d5"
-        android:layout_marginTop="38dp"
-        android:layout_below="@+id/b23"
-        android:layout_alignLeft="@+id/b23"
-        android:layout_alignStart="@+id/b23"
-        android:onClick="onButtonClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="7"
-        android:id="@+id/b31"
-        android:background="#ffd5d5d5"
-        android:layout_alignTop="@+id/b33"
-        android:layout_alignLeft="@+id/b21"
-        android:layout_alignStart="@+id/b21"
-        android:onClick="onButtonClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="8"
-        android:id="@+id/b32"
-        android:background="#ffd5d5d5"
-        android:layout_alignTop="@+id/b33"
-        android:layout_alignLeft="@+id/b22"
-        android:layout_alignStart="@+id/b22"
-        android:onClick="onButtonClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:id="@+id/b42"
-        android:background="#ffd5d5d5"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="onButtonClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="="
-        android:id="@+id/b43"
-        android:background="#ffd5d5d5"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/b33"
-        android:layout_alignStart="@+id/b33"
-        android:onClick="onButtonClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+/-"
-        android:id="@+id/b41"
-        android:background="#ffd5d5d5"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/b31"
-        android:layout_alignStart="@+id/b31"
-        android:onClick="onButtonClick" />
+        android:orientation="vertical"
+        android:background="#ffffffff">
+    </LinearLayout>
 
 </RelativeLayout>
